# recipio

./: Cargo.toml
crates/recipio-core/: Cargo.toml
crates/recipio-core/src/: auth.rs  error.rs  hasher.rs  ingredient.rs  lib.rs  recipe.rs  recipes.rs  session.rs  user.rs
crates/recipio-core/src/catalog/: ingredient.rs  mod.rs  recipe.rs  units.rs
crates/recipio-core/src/common/: id.rs  mod.rs
crates/recipio-core/src/identity/: auth.rs  hasher.rs  mod.rs  session.rs  user.rs
crates/recipio-infra/: Cargo.toml
crates/recipio-infra/src/: bcrypt_hasher.rs
crates/recipio-infra/src/crypto/: bcrypt_hasher.rs
crates/recipio-infra/src/database/: mod.rs
crates/recipio-infra/src/database/catalog/: in_memory_ingredient_repo.rs  mod.rs
crates/recipio-infra/src/database/identity/: in_memory_session_repo.rs
crates/recipio-repos/: Cargo.toml
crates/recipio-repos/src/: in_memory.rs  lib.rs  memory_repo.rs
crates/recipio-repos/src/identity/: in_memory_user_repo.rs  mod.rs
crates/recipio-repos/src/in_memory/: session_repo.rs  user_repo.rs
crates/recipio-services/: Cargo.toml
crates/recipio-services/src/: lib.rs  session_service.rs  user_service.rs
crates/recipio-services/src/identity/: session_service.rs  user_service.rs
crates/recipio-web/: Cargo.toml
crates/recipio-web/src/: auth.rs  error.rs  main.rs  response.rs  session_routes.rs  state.rs  user_routes.rs
crates/recipio-web/src/identity/: auth.rs  mod.rs  session_routes.rs  user_routes.rs
