[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
recipio-core = { path = "./crates/recipio-core" }
recipio-infra = { path = "./crates/recipio-infra" }
recipio-repos = { path = "./crates/recipio-repos" }
recipio-services = { path = "./crates/recipio-services" }

derive-where = { version = "1.6", features = ["serde"] }
argon2 = { version = "0.5", features = ["rand", "password-hash"] }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["macros"] }
base64 = { version = "0.22" }
bcrypt = { version = "0.19" }
bon = { version = "3.9" }
derive_more = { version = "2.1", features = ["full"] }
hex = { version = "0.4" }
nutype = { version = "0.7", features = ["serde", "regex"] }
rand = { version = "0.10", features = ["std", "std_rng", "sys_rng", "alloc"] }
regex = { version = "1.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
serde_with = { version = "3.20" }
sha2 = { version = "0.11" }
snafu = { version = "0.9" }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "uuid"] }
thiserror = { version = "2.0" }
time = { version = "0.3", features = ["macros"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.52", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }

[workspace.lints.rustdoc]
all = { level = "warn" }

[workspace.lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -2 }
complexity = { level = "warn", priority = -2 }
perf = { level = "warn", priority = -2 }
style = { level = "warn", priority = -2 }
suspicious = { level = "warn", priority = -2 }
#missing_docs_in_private_items = { level = "warn" }
must_use_candidate = "allow"
missing_const_for_fn = "allow"
