[package]
name = "recipio-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bon = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
nutype = { workspace = true }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["macros"] }
snafu = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7", "serde"] }

[lints]
workspace = true
