[package]
name = "recipio-services"
version.workspace = true
edition.workspace = true

[dependencies]
recipio-core = { workspace = true }

base64.workspace = true
bcrypt = { workspace = true }
hex.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true

[lints]
workspace = true
