[package]
name = "recipio-web"
version.workspace = true
edition.workspace = true

[dependencies]
recipio-core = { workspace = true }
recipio-repos = { workspace = true }
recipio-services = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
